Add numeric parsing script to index.html
Added a script section with a numeric parsing function.

--- a/index.html
+++ b/index.html
@@ -275,6 +275,8 @@
             </div>
         </div>
     </div>
+    
+    <script>
 
     // --- Helper numeric parsing that emulates careful arithmetic ---
 function toNum(v) {
@@ -483,6 +485,7 @@ ${total < 50 ? '🟥 Тотал < 50 — летник.' :
     if (note) note.textContent = 'Расчёт завершён';
     setProgress(total);
 }
+    </script>
 
 </body>
 
